[package]
name = "sample-map"
version = "0.1.0"
description = "Sample Map: zoomable point-cloud WAV browser (CLAP+UMAP)"
authors = ["Sample Map contributors"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
walkdir = "2.5"
rodio = { version = "0.17", features = ["vorbis"] }
rusqlite = { version = "0.31", features = ["bundled"] }
time = { version = "0.3", features = ["macros"] }
tauri-plugin-clipboard-manager = "2"
uuid = { version = "1.11", features = ["v4"] }
hound = "3.5"
